# LambForce-EC

./: .gitignore  README.md  STEP3_SHA256SUMS  pyproject.toml
.github/workflows/: ci.yml
LambForce-EC_step2/: SHA256SUMS
LambForce-EC_step2/benchmarks/: benchmark_details.json  benchmark_results.csv  canonical_cases.yaml  convergence_results.csv  solver_selection.json  solver_selection.md  step2_manifest.json
LambForce-EC_step2/docs/: COMPUTATIONAL_BUDGET.md  FEASIBILITY_REPORT.md  LOAD_DEFINITIONS.md  MODEL_EQUATIONS.md  NUMERICAL_METHODS_REVIEW.md  OUTPUT_DEFINITIONS.md  SCIENTIFIC_CONTRACT.md  SOLVER_SELECTION.md  STEP2_BENCHMARK_REPORT.md
LambForce-EC_step2/parameters/: parameter_registry.csv  parameter_schema.json  source_registry.csv
LambForce-EC_step2/protocol/: decision_gates.yaml  hypotheses.yaml  simulation_conditions.yaml
LambForce-EC_step2/prototypes/: minimum_feasibility.py  minimum_feasibility_results.json
benchmarks/: phase0_validation_summary.json  step3_validation_summary.json
configs/: reference_arteries.yaml  step3_default.yaml
docs/: DATA_CONTRACT.md  GOVERNANCE_SOURCES.md  PHASE0_PROTOCOL_SURFACE.md  PHASE0_VALIDATION_REPORT.md  PHASE1_PUBLISHED_SOURCE_REPRODUCTION.md  PRE_PHASE1_READINESS_FIXES.md  STEP3_ARCHITECTURE.md  STEP3_VALIDATION_REPORT.md  VALIDATION.md
examples/: run_synthetic.py
historical/step3/: README.md
notebooks/: LambForce_EC_Step3_Colab.ipynb
protocol/: decision_gates.yaml  readme_traceability.yaml
registry/: parameter_registry.csv  parameter_sets.yaml  published_v2_hydrodynamics.yaml  source_registry.yaml  structural_classes.yaml
schemas/: artery_input.schema.json  conversion_manifest.schema.json  published_hydrodynamics.schema.json  run_config.schema.json  source_registry.schema.json
src/lambforce_ec/: __init__.py  analysis.py  archive.py  cli.py  constitutive.py  exceptions.py  governance.py  harmonics.py  interfaces.py  io.py  loads.py  models.py  protocol.py  (+9 more)
tests/: test_archive_ingestion.py  test_archive_integrity.py  test_bounded_boundary_verification.py  test_cli_readiness.py  test_cli_registry.py  test_constitutive.py  test_harmonics.py  test_io.py  test_load_controls.py  test_loads.py  test_phase0_traceability.py  test_protocol_surfaces.py  test_provenance.py  test_readiness_governance.py  test_solver_limits_phase0.py  test_spectral_solver.py  test_structural_classes.py  test_verification_solvers.py  test_workflow.py  test_workflow_phase0.py
(+10 files in other folders)
