[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lambforce-ec"
version = "0.6.0"
description = "Force-conserving endothelial mechanics interface for anisotropic near-wall Lamb forcing and WSS"
readme = "docs/STEP3_ARCHITECTURE.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Khalid M. Saqr"}]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "PyYAML>=6.0",
  "threadpoolctl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.5", "build>=1.2"]

[project.scripts]
lambforce-ec = "lambforce_ec.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/lambforce_ec" = ["README.md"]
"share/lambforce_ec/registry" = [
  "registry/parameter_registry.csv",
  "registry/parameter_sets.yaml",
  "registry/published_v2_hydrodynamics.yaml",
  "registry/source_registry.yaml",
  "registry/structural_classes.yaml",
]
"share/lambforce_ec/protocol" = [
  "protocol/decision_gates.yaml",
  "protocol/readme_traceability.yaml",
]
"share/lambforce_ec/configs" = [
  "configs/reference_arteries.yaml",
]
"share/lambforce_ec/schemas" = [
  "schemas/artery_input.schema.json",
  "schemas/published_hydrodynamics.schema.json",
  "schemas/run_config.schema.json",
  "schemas/source_registry.schema.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
